--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,41 @@
-/* Base styles for #nav-icon3 */
-#nav-icon3 {
-  width: 60px;
-  height: 45px;
-  position: relative;
-  margin: 50px auto;
-  cursor: pointer;
-  transition: transform 0.5s ease-in-out;
-}
+/* Icon 3 */
 
-/* Hamburger bars */
-#nav-icon3 span {
-  display: block;
-  position: absolute;
-  height: 9px;
-  width: 100%;
-  background: #d3531a;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  transition: transform 0.5s ease-in-out, top 0.5s ease-in-out, width 0.5s ease-in-out;
-}
-
-/* Position of the bars */
 #nav-icon3 span:nth-child(1) {
   top: 0px;
+  display: block;
 }
+
 #nav-icon3 span:nth-child(2),
 #nav-icon3 span:nth-child(3) {
   top: 18px;
 }
+
 #nav-icon3 span:nth-child(4) {
   top: 36px;
 }
 
-/* Flip effect when the menu opens */
-#nav-icon3.open {
-  transform: rotateY(180deg);
+#nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
 
-/* Middle bars form an "X" */
 #nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
 #nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
-/* Hide first and last bars */
-#nav-icon3.open span:nth-child(1),
 #nav-icon3.open span:nth-child(4) {
-  width: 0;
-  opacity: 0;
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
