--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,10 @@
   height: 80vh;
   display: flex;
 }
+
+@media (max-width: 767px) {
+  #hero {
+    background: url('assets/img/hero-mobile.jpg') center/cover no-repeat;
+    height: 60vh;
+  }
+}
