--- a/styles.css
+++ b/styles.css
@@ -127,10 +127,16 @@
 /* Service Cards */
 .service-card {
   background: white;
-  border-radius: 12px;
+  border-radius: 10px;
   transition: transform 0.3s ease-in-out;
 }
 
 .service-card:hover {
   transform: scale(1.05);
+}
+
+/* Carousel */
+
+.carousel-item {
+  transition: transform 1.5s ease-in-out !important; /* Slower animation */
 }
